--- a/ss8_cau_lenh_dieu_kien/bai_tap/luyen_tap_cau_lenh_dieu_kien_1/style.css
+++ b/ss8_cau_lenh_dieu_kien/bai_tap/luyen_tap_cau_lenh_dieu_kien_1/style.css
@@ -3,6 +3,10 @@ h2 {
     font-family: Arial, sans-serif
 }
 
+h3 {
+    color: red;
+}
+
 label {
     display: block;
     margin-bottom: 8px;
@@ -26,3 +30,4 @@ button {
     border: none;
     border-radius: 2px
 }
+
